src/compile_warnings.txt
./utility/buffer/buffer_append_str/buffer_append_str.c: In function ‘buffer_append_str’:
./utility/buffer/buffer_append_str/buffer_append_str.c:26:21: warning: implicit declaration of function ‘memory_realloc’ [-Wimplicit-function-declaration]
   26 |         str->data = memory_realloc(str->data, str->capacity * sizeof(char));
      |                     ^~~~~~~~~~~~~~
./utility/buffer/buffer_append_str/buffer_append_str.c:26:19: warning: assignment to ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   26 |         str->data = memory_realloc(str->data, str->capacity * sizeof(char));
      |                   ^
./utility/buffer/buffer_destroy/buffer_destroy.c: In function ‘buffer_destroy’:
./utility/buffer/buffer_destroy/buffer_destroy.c:16:13: warning: implicit declaration of function ‘memory_destroy’ [-Wimplicit-function-declaration]
   16 |             memory_destroy(str->data);
      |             ^~~~~~~~~~~~~~
./utility/buffer/buffer_destroy_and_get/buffer_destroy_and_get.c: In function ‘buffer_destroy_and_get’:
./utility/buffer/buffer_destroy_and_get/buffer_destroy_and_get.c:15:5: warning: implicit declaration of function ‘buffer_destroy’; did you mean ‘buffer_destroy_and_get’? [-Wimplicit-function-declaration]
   15 |     buffer_destroy(str);
      |     ^~~~~~~~~~~~~~
      |     buffer_destroy_and_get
./utility/buffer/buffer_set/buffer_set.c: In function ‘buffer_set’:
./utility/buffer/buffer_set/buffer_set.c:15:12: warning: implicit declaration of function ‘buffer_append_str’ [-Wimplicit-function-declaration]
   15 |     return buffer_append_str(str, value->data);
      |            ^~~~~~~~~~~~~~~~~
./utility/buffer/buffer_set/buffer_set.c:15:12: warning: ‘return’ with a value, in function returning void [-Wreturn-type]
   15 |     return buffer_append_str(str, value->data);
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./utility/buffer/buffer_set/buffer_set.c:12:6: note: declared here
   12 | void buffer_set(buffer_t *str, buffer_t *value)
      |      ^~~~~~~~~~
./utility/buffer/buffer_set_str/buffer_set_str.c: In function ‘buffer_set_str’:
./utility/buffer/buffer_set_str/buffer_set_str.c:15:12: warning: ISO C forbids ‘return’ with expression, in function returning void [-Wpedantic]
   15 |     return buffer_append_str(str, value);
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./utility/buffer/buffer_set_str/buffer_set_str.c:12:6: note: declared here
   12 | void buffer_set_str(buffer_t *str, const char *value)
      |      ^~~~~~~~~~~~~~
./utility/string/string_ends/string_ends.c: In function ‘string_ends’:
./utility/string/string_ends/string_ends.c:22:12: error: too few arguments to function ‘strncmp’
   22 |     return strncmp(source + source_len - search_len, search) == 0;
      |            ^~~~~~~
In file included from /mnt/c/Users/ALI/Projects/Salam/src/utility/string/string_ends/string_ends.h:2,
                 from ./utility/string/string_ends/string_ends.c:1:
/usr/include/string.h:159:12: note: declared here
  159 | extern int strncmp (const char *__s1, const char *__s2, size_t __n)
      |            ^~~~~~~
./utility/string/string_ends/string_ends.c:23:1: warning: control reaches end of non-void function [-Wreturn-type]
   23 | }
      | ^
./utility/utf8/utf8_strlen/utf8_strlen.c: In function ‘utf8_strlen’:
./utility/utf8/utf8_strlen/utf8_strlen.c:17:5: warning: implicit declaration of function ‘memset_s’; did you mean ‘memset’? [-Wimplicit-function-declaration]
   17 |     memset_s(&state, sizeof(state), 0, sizeof(state));
      |     ^~~~~~~~
      |     memset
